@startuml mawared-erd
' MTNIMA — Mawared ERD (Dynamic RBAC)

skinparam linetype ortho
skinparam shadowing false

title Mawared — Entity-Relationship Diagram

entity "roles" as roles {
  * **id** : bigint <<PK>>
  --
  * name : varchar
  * slug : varchar <<UK>>
  description : text (nullable)
  * is_system : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity "permissions" as permissions {
  * **id** : bigint <<PK>>
  --
  * slug : varchar <<UK>>
  * group : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity "role_permission" as role_permission {
  * **role_id** : bigint <<PK, FK>>
  * **permission_id** : bigint <<PK, FK>>
}

entity "users" as users {
  * **id** : bigint <<PK>>
  --
  * name : varchar
  * first_name : varchar
  * last_name : varchar
  phone : varchar
  job_title : varchar (nullable)
  employee_number : varchar (nullable)
  * email : varchar <<UK>>
  * role_id : bigint <<FK>>
  * password : varchar
  remember_token : varchar (nullable)
  created_at : timestamp
  updated_at : timestamp
}

entity "departments" as departments {
  * **id** : bigint <<PK>>
  --
  * name : varchar
  deleted_at : timestamp (nullable)
}

entity "employees" as employees {
  * **id** : bigint <<PK>>
  --
  * name : varchar
  department_id : bigint <<FK>> (nullable)
  deleted_at : timestamp (nullable)
}

entity "assets" as assets {
  * **id** : bigint <<PK>>
  --
  * name : varchar
  * type : varchar
  * serial_number : varchar <<UK>>
  * status : varchar
}

entity "assignments" as assignments {
  * **id** : bigint <<PK>>
  --
  * asset_id : bigint <<FK>> <<UK>>
  employee_id : bigint <<FK>> (nullable)
  * employee_name : varchar
  * department : varchar
  * assigned_date : date
}

entity "assignment_histories" as assignment_histories {
  * **id** : bigint <<PK>>
  --
  asset_id : bigint <<FK>> (nullable)
  employee_name : varchar
  assigned_date : date
  returned_date : date (nullable)
}

entity "maintenances" as maintenances {
  * **id** : bigint <<PK>>
  --
  * asset_id : bigint <<FK>>
  * issue_description : text
  * priority : varchar
  * technician_name : varchar
  * status : varchar
  * maintenance_start_date : date
  maintenance_end_date : date (nullable)
}

roles ||--o{ role_permission
permissions ||--o{ role_permission
roles ||--o{ users : role_id
departments ||--o{ employees
employees ||--o{ assignments
assets ||--|| assignments
assets ||--o{ maintenances
assets ||--o{ assignment_histories

note bottom of roles
  System slugs: technical_admin,
  inventory_supervisor, warehouse_keeper
  Custom roles: is_system = false
end note

@enduml
